# agts

./: .gitignore  CLAUDE.md  README.md  fineness_nowcaster.joblib  pyproject.toml
.claude/: settings.json
.claude/agents/: agts-research-meta.md  agts-research-worker.md  tot-coordinator.md  tot-critic.md  tot-solver.md  tot-tool-researcher.md  tot-verifier.md
.claude/skills/agts-research-run/: SKILL.md
.claude/skills/branch-audit/: SKILL.md
agts/: __init__.py  adapters.py  cli.py  engine.py  jsonutil.py  models.py  prompts.py  storage.py
agts_research/: __init__.py  cli.py  config.py  distill.py  eval_server.py  evaluator.py  heartbeat.py  hydrate.py  instructions.py  meta.py  models.py  monitor.py  provenance.py  report.py  review.py  runtime.py  standalone.py  storage.py  verifier.py  workspace.py
benchmarks/bin_packing/: README.md  eval.py  final_instances.json  private_instances.json  public_instances.json  research.json
benchmarks/eplb/: README.md  eval.py  final_instances.json  private_instances.json  public_instances.json  research.json
benchmarks/knapsack/: README.md  eval.py  final_instances.json  private_instances.json  public_instances.json  research.json
docs/: TODO.md
docs/specs/: agts_claude_code.md  agts_coral_summary.md  agts_implementation_scaffold.md  agts_research.md  agts_summary.md  agts_system.md
examples/coral_nowcaster_im_only_polish_verified/: eval.py  fineness_nowcaster.joblib  research.json  solution.py
examples/research_smoke/: eval.py  research.json
scripts/: validate_json_artifact.py
tests/: test_research_core.py
(+7 files in other folders)
