[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agts"
version = "0.1.0"
description = "Agentic Tree Search with Claude Code SDK orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
agts = "agts.cli:main"
agts-research = "agts_research.standalone:main"

[tool.setuptools.packages.find]
include = ["agts*","agts_research*"]
